more java example fix